<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_transaction"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_transaction"
        android:shortcutShortLabel="@string/add_transaction">
        <intent
            android:action="com.reddy.vittify.action.ADD_TRANSACTION"
            android:targetPackage="com.reddy.vittify"
            android:targetClass="com.reddy.vittify.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="add_subscription"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_add_subscription"
        android:shortcutShortLabel="@string/add_subscription">
        <intent
            android:action="com.reddy.vittify.action.ADD_SUBSCRIPTION"
            android:targetPackage="com.reddy.vittify"
            android:targetClass="com.reddy.vittify.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="add_transfer"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_transfer"
        android:shortcutShortLabel="@string/add_transfer">
        <intent
            android:action="com.reddy.vittify.action.ADD_TRANSFER"
            android:targetPackage="com.reddy.vittify"
            android:targetClass="com.reddy.vittify.MainActivity" />
    </shortcut>

    <!-- Google Assistant Capabilities -->
    <capability android:name="actions.intent.RECORD_EXPENSE">
        <intent
            android:action="com.reddy.vittify.action.ADD_TRANSACTION"
            android:targetPackage="com.reddy.vittify"
            android:targetClass="com.reddy.vittify.MainActivity">
            <parameter
                android:name="expense.price"
                android:key="amount" />
            <parameter
                android:name="expense.name"
                android:key="merchant" />
            <parameter
                android:name="expense.category"
                android:key="category" />
        </intent>
    </capability>

    <capability android:name="actions.intent.CREATE_MONEY_TRANSFER">
        <intent
            android:action="com.reddy.vittify.action.ADD_TRANSACTION"
            android:targetPackage="com.reddy.vittify"
            android:targetClass="com.reddy.vittify.MainActivity">
            <parameter
                android:name="moneyTransfer.price"
                android:key="amount" />
            <parameter
                android:name="moneyTransfer.name"
                android:key="merchant" />
        </intent>
    </capability>
</shortcuts>
